fix: add jwt key-generate commando on ci

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -27,6 +27,10 @@ jobs:
         run: php artisan key:generate
         working-directory: ./api
 
+      - name: Generate JWT secret
+        run: php artisan jwt:secret --force
+        working-directory: ./api
+
       - name: Run unit tests
         run: php artisan test
         working-directory: ./api
