--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,7 +13,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.1'
-          coverage: none
+          coverage: pcov
 
       - name: Install Composer dependencies
         run: composer install --no-progress --prefer-dist
@@ -31,6 +31,12 @@ jobs:
         run: php artisan jwt:secret --force
         working-directory: ./api
 
-      - name: Run unit tests
-        run: php artisan test
+      - name: Run unit tests with coverage
+        run: php artisan test --coverage-clover=coverage.xml
         working-directory: ./api
+
+      - name: Upload coverage report to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          files: ./api/coverage.xml
+          fail_ci_if_error: true
